fix(matchingWinningNumbers): 랭크, 랭크 갯수 쌍을 반환하도록 수정